rhosp8/files/ovs_with_external_network_bridge/controller/etc/sysconfig/iptables.save
# Generated by iptables-save v1.4.21 on Mon Apr 11 12:49:55 2016
*raw
:PREROUTING ACCEPT [39674:40205273]
:OUTPUT ACCEPT [36697:6021800]
COMMIT
# Completed on Mon Apr 11 12:49:55 2016
# Generated by iptables-save v1.4.21 on Mon Apr 11 12:49:55 2016
*mangle
:PREROUTING ACCEPT [53897:52192295]
:INPUT ACCEPT [50177:51954147]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [48678:8578706]
:POSTROUTING ACCEPT [48678:8578706]
:nova-api-POSTROUTING - [0:0]
-A POSTROUTING -j nova-api-POSTROUTING
COMMIT
# Completed on Mon Apr 11 12:49:55 2016
# Generated by iptables-save v1.4.21 on Mon Apr 11 12:49:55 2016
*nat
:PREROUTING ACCEPT [4560:349346]
:INPUT ACCEPT [29:2008]
:OUTPUT ACCEPT [832:56408]
:POSTROUTING ACCEPT [832:56408]
:nova-api-OUTPUT - [0:0]
:nova-api-POSTROUTING - [0:0]
:nova-api-PREROUTING - [0:0]
:nova-api-float-snat - [0:0]
:nova-api-snat - [0:0]
:nova-postrouting-bottom - [0:0]
-A PREROUTING -j nova-api-PREROUTING
-A OUTPUT -j nova-api-OUTPUT
-A POSTROUTING -j nova-api-POSTROUTING
-A POSTROUTING -j nova-postrouting-bottom
-A nova-api-snat -j nova-api-float-snat
-A nova-postrouting-bottom -j nova-api-snat
COMMIT
# Completed on Mon Apr 11 12:49:55 2016
# Generated by iptables-save v1.4.21 on Mon Apr 11 12:49:55 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3:156]
:nova-api-FORWARD - [0:0]
:nova-api-INPUT - [0:0]
:nova-api-OUTPUT - [0:0]
:nova-api-local - [0:0]
:nova-filter-top - [0:0]
-A INPUT -j nova-api-INPUT
-A INPUT -s 10.0.1.111/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.0.1.111" -j ACCEPT
-A INPUT -s 10.0.1.131/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.0.1.131" -j ACCEPT
-A INPUT -s 10.0.1.132/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.0.1.132" -j ACCEPT
-A INPUT -s 10.0.1.131/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.0.1.131" -j ACCEPT
-A INPUT -s 10.0.1.132/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.0.1.132" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8776 -m comment --comment "001 cinder-api incoming cinder_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9292 -m comment --comment "001 glance incoming glance_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8004 -m comment --comment "001 heat incoming heat" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80 -m comment --comment "001 horizon 80  incoming" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 5000,35357 -m comment --comment "001 keystone incoming keystone" -j ACCEPT
-A INPUT -s 10.0.1.111/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.0.1.111" -j ACCEPT
-A INPUT -s 10.0.1.131/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.0.1.131" -j ACCEPT
-A INPUT -s 10.0.1.132/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.0.1.132" -j ACCEPT
-A INPUT -s 10.0.1.111/32 -p tcp -m multiport --dports 27017 -m comment --comment "001 mongodb-server incoming mongodb_server" -j ACCEPT
-A INPUT -p udp -m multiport --dports 67 -m comment --comment "001 neutron dhcp in incoming neutron_dhcp_in_10.0.1.111" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9696 -m comment --comment "001 neutron server incoming neutron_server_10.0.1.111" -j ACCEPT
-A INPUT -s 10.0.2.111/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.0.1.111_10.0.2.111" -j ACCEPT
-A INPUT -s 10.0.2.131/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.0.1.111_10.0.2.131" -j ACCEPT
-A INPUT -s 10.0.2.132/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.0.1.111_10.0.2.132" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8773,8774,8775 -m comment --comment "001 nova api incoming nova_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 6080 -m comment --comment "001 novncproxy incoming" -j ACCEPT
-A INPUT -s 10.0.1.111/32 -p tcp -m multiport --dports 6379 -m comment --comment "001 redis service incoming redis service from 10.0.1.111" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8080 -m comment --comment "001 swift proxy incoming swift_proxy" -j ACCEPT
-A INPUT -s 10.0.1.111/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.0.1.111" -j ACCEPT
-A INPUT -s 10.0.1.131/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.0.1.131" -j ACCEPT
-A INPUT -s 10.0.1.132/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.0.1.132" -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j nova-filter-top
-A FORWARD -j nova-api-FORWARD
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -p udp -m multiport --dports 68 -m comment --comment "001 neutron dhcp out outgoing neutron_dhcp_out_10.0.1.111" -j ACCEPT
-A OUTPUT -j nova-filter-top
-A OUTPUT -j nova-api-OUTPUT
-A nova-api-INPUT -d 10.0.1.111/32 -p tcp -m tcp --dport 8775 -j ACCEPT
-A nova-filter-top -j nova-api-local
COMMIT
# Completed on Mon Apr 11 12:49:55 2016
